--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -9,7 +9,7 @@ html lang="ja"
     meta[description="#{page_description}"]
     = feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed"
     = stylesheet_link_tag "all"
-    = favicon_tag '/images/favicon.png'
+    = favicon_tag '/images/favicon.ico'
     = partial "partials/analytics"
   body
     header
