--- a/source/stylesheets/partials/_header.css.scss
+++ b/source/stylesheets/partials/_header.css.scss
@@ -7,12 +7,13 @@ header {
   margin: 0 auto;
 
   @include breakpoint($large-screen) {
-    background-position: center 40px;
-    background-size: contain;
+//    background-position: center 40px;
+//    background-size: contain;
   }
 
   @include breakpoint($large-screen) {
-    height: 400px;
+//    height: 400px;
+    height: 1px;
   }
 
   .top-menu {
