--- a/source/localizable/archives.html.slim
+++ b/source/localizable/archives.html.slim
@@ -7,7 +7,7 @@ pageable: true
 h1
   | Archives
 ul.archive-list
-  - blog.articles.each do |article|
+  - blog.local_articles.each do |article|
     li
       span.archive-posted-date-wrapper
         i.fa.fa-clock-o
