--- a/source/localizable/by-year.html.slim
+++ b/source/localizable/by-year.html.slim
@@ -3,6 +3,6 @@
 h1
   | Articles By Year
 ul.archive-list
-  - blog.articles.group_by { |a| a.date.year }.each do |year, articles|
+  - blog.local_articles.group_by { |a| a.date.year }.each do |year, articles|
     li
       = link_to "#{year} (#{articles.size})", blog_year_path(year)
