--- a/source/localizable/index.html.slim
+++ b/source/localizable/index.html.slim
@@ -2,7 +2,7 @@
 pageable: true
 per_page: 10
 --- 
-- page_articles.each_with_index do |article, i|
+- blog.local_articles.each do |article|
   h1.article-title
     = link_to article.title, article
   .posted-date-wrapper
