--- a/source/stylesheets/partials/_header.css.scss
+++ b/source/stylesheets/partials/_header.css.scss
@@ -48,6 +48,7 @@ header {
           float: left;
           margin-left: 15px;
 //          width: 80%;
+          width: 50%;
         }
 
         &.right {
